[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Themes/ThemeDefault.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/ThemeHeaderText.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/Spinner/Spinner.tscn" type="PackedScene" id=3]
[ext_resource path="res://EmotiscopeApp.gd" type="Script" id=4]
[ext_resource path="res://Assets/SVG/info.svg" type="Texture" id=5]
[ext_resource path="res://Assets/SVG/menu.svg" type="Texture" id=6]
[ext_resource path="res://System.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/DebugGraph/DebugGraph.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/UI/SettingGallery/SettingGallery.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.164706 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.995049 )
colors = PoolColorArray( 0.113725, 0.0784314, 0.184314, 0, 0.109804, 0.0705882, 0.160784, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )
width = 32

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.109804, 0.0705882, 0.160784, 1, 0.113725, 0.0784314, 0.184314, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 32

[node name="EmotiscopeApp" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.997866, 1.00391 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="Screen"]
visible = false
color = Color( 0.482353, 0.560784, 0.741176, 1 )

[node name="Header" type="HBoxContainer" parent="Screen"]
margin_right = 1070.0
margin_bottom = 45.0
alignment = 1

[node name="HeaderIconLeft" type="TextureButton" parent="Screen/Header"]
margin_right = 40.0
margin_bottom = 45.0
texture_normal = ExtResource( 6 )

[node name="HeaderText" type="Label" parent="Screen/Header"]
margin_left = 41.0
margin_right = 1029.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.635294, 0.368627, 1 )
text = "emotiscope"
align = 1
valign = 1

[node name="HeaderIconRight" type="TextureButton" parent="Screen/Header"]
margin_left = 1030.0
margin_right = 1070.0
margin_bottom = 45.0
texture_normal = ExtResource( 5 )

[node name="Contents" type="VBoxContainer" parent="Screen"]
margin_top = 49.0
margin_right = 1070.0
margin_bottom = 1670.0
size_flags_vertical = 3

[node name="DebugGraph" parent="Screen/Contents" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1070.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="DebugText" type="RichTextLabel" parent="Screen/Contents"]
margin_top = 154.0
margin_right = 1070.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 35 )
theme = ExtResource( 1 )
custom_colors/default_color = Color( 1, 0.635294, 0.368627, 1 )
text = "debugging output below:"
scroll_active = false
scroll_following = true

[node name="SettingGallery" parent="Screen/Contents" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 193.0
margin_right = 1070.0
margin_bottom = 1621.0
size_flags_vertical = 3

[node name="ScreenFadeRight" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_right = -14.0
rect_min_size = Vector2( 16, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 2 )
expand = true

[node name="ScreenFadeLeft" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_right = 15.0
rect_min_size = Vector2( 16, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 5 )
expand = true

[node name="Spinner" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 550, 850 )
